--- a/VRChat/74/1064174.html
+++ b/VRChat/74/1064174.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "luSfp+8EAHFu/i0pIdJvGi/Q1R4Vz0Wm6a6fI1SByNA="></script>
+    "mZLw0Dsp5bpAAA66giEvkuybh5jMSAMZ4UM2jn3CLEQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRMのみ】NEKO FANTASY 黒魔道士","description":"VRMアバター　「NEKO FANTASY 黒魔道士」\n\nポリゴン数：7334\n\n5種類のねこちゃんから好きな子を選べます。\n\nリップシンク対応\n感情表現はありませんが「equip」で杖を持ちます。\n\n「all in one package 全部パック」は5種類すべてのVRMファイルと、VRMのカスタマイズができるunitypackageあり。\n\n\n＜更新履歴＞\n2022.02.07　VRM版のみ再販しました。杖を持つシェイプキーを追加。リップシンクを修正しました。","url":"https://booth.pm/ja/items/1064174","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"600","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/1064174/4144e390-ce94-4a65-9d95-180a76e19fcf_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="luSfp+8EAHFu/i0pIdJvGi/Q1R4Vz0Wm6a6fI1SByNA="></script>
+    nonce="mZLw0Dsp5bpAAA66giEvkuybh5jMSAMZ4UM2jn3CLEQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1064174/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               179
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1064174/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               179
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
