--- a/VRChat/04/1064704.html
+++ b/VRChat/04/1064704.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "eLF6bXiQzZp92Zhmi6tVgjcW0/gCq+vM7k96gnn4EQk="></script>
+    "J0E2hxkc2qrlE2ZjRW6FcpVS6ngy6IB5Dza1Ymfd9yY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ローション＆マット","description":"ごく普通のマッサージ用のマットとローションです\nサイズが大きいので各自でサイズ調節してお使いください。\nシェーダーはgemシェーダーを使うとサムネイルのような形になります。\n改変等は自由です。よろしくお願いします！","url":"https://booth.pm/ja/items/1064704","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/dfed956f-05d3-47f6-8530-1e2fec37b36e/i/1064704/a1794c6d-ba25-4838-99a8-d7678501d6b1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="eLF6bXiQzZp92Zhmi6tVgjcW0/gCq+vM7k96gnn4EQk="></script>
+    nonce="J0E2hxkc2qrlE2ZjRW6FcpVS6ngy6IB5Dza1Ymfd9yY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1064704/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1064704/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               36
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
