--- a/VRChat/69/1064369.html
+++ b/VRChat/69/1064369.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "QDC24hDuzUh/Xs4yFgEYsSqdNF/uXaM6j/gGjrhQzCQ="></script>
+    "HZZ4hbsr6uJBqiSNpVdU5CHpMkmBtHs5sAlUL1HuoRs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バイオリン","description":"バイオリンのモデルです。\n様々な用途にお使いください。\nファイル形式はobj、fbxです。\nポリゴン数は約17000です。\nVRChatにアップロードする際は注意事項が何点かありますので、必ずreadmeに目を通して頂ける様お願い致します。\n再配布は禁止です。\n商用利用可です。\n\n追記、一部テクスチャを変更しています。テクスチャは各自で用意してください。","url":"https://booth.pm/ja/items/1064369","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/dfed956f-05d3-47f6-8530-1e2fec37b36e/i/1064369/3dc6a314-73a9-4740-8bea-1511f5f32afa_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="QDC24hDuzUh/Xs4yFgEYsSqdNF/uXaM6j/gGjrhQzCQ="></script>
+    nonce="HZZ4hbsr6uJBqiSNpVdU5CHpMkmBtHs5sAlUL1HuoRs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1064369/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               45
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1064369/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               45
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
