--- a/VRChat/80/1388480.html
+++ b/VRChat/80/1388480.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "/y18qaMqaGXJ+FKfmDupjYguIY+lB74yX1yPUHyKVbQ="></script>
+    "mJdetQ4cl8qvnB5xTquU9Kypt2YPzpFIW60mgSfX/9s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ふみきりの標識","description":"ふみきりの標識の3Dモデルです～\nお部屋のインテリアに最適です！\n\n・blenderファイル\n・FBX\n・unitypackage\n\n利用規約\n１．改造可能\n２．利用の際のクレジット表記不要\n３．商用利用可能\n４．ゲームエンジン等で開発されたコンテンツ及びサービスで利用可能\n５．再配布、再販売の禁止","url":"https://booth.pm/ja/items/1388480","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8073d67b-2410-49a1-b608-5700550a6b7b/i/1388480/61aefc7f-2fa4-4c3e-96a3-cbd6b526ca57_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/y18qaMqaGXJ+FKfmDupjYguIY+lB74yX1yPUHyKVbQ="></script>
+    nonce="mJdetQ4cl8qvnB5xTquU9Kypt2YPzpFIW60mgSfX/9s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,10 +159,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1388480/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              60
+                              61
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1388480/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              60
+                              61
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
