--- a/VRChat/05/1064505.html
+++ b/VRChat/05/1064505.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dYvTJQC/IfPaBrtHpj9At40Ffo/rIC52LNLZ/ZlM/ms="></script>
+    "aHGG4BkN0idGoY7dTa02WtF2vrgm60yPTNl2+oDQJpY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat向け] あるスライムのコート","description":"本ファイルは、\n\n\nあるスライムのコートモデル。fbx\nテクスチャ.png\n法線マップ.png\n\n※スライムは含まれていません。\n\nが含まれているファイルです。使用時、規約を必ず守ってください。\n\n**********************************************\n\n1.変更許可。配布可能です。\n\n上記モデルの原型を変形したり、テクスチャを変更してもかまいません。\n\n2.商業用途に使用しないでください。\n\n商業目的とコミッション、転売、修正販売などを意味します。\n\n3.本モデルは、vrchatモデルのために製作されました。\n\nflat it toonシェーダを基準に製作されました。\n\n4.モデルに問題点が発見された場合、作成者のメールやディスコードのアカウントにご連絡ください。\n\nディスコード連絡が一番早いです。\n\nディスコード：Nyarr＃3915\n\nメールアドレス：Nyarr556@naver.com\n\n**********************************************\n\n\n製作者：ニャル（Nyarr）with KVCG","url":"https://booth.pm/ja/items/1064505","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/aff428fe-6d55-48b0-9192-d9022be6991f/i/1064505/9052be81-da5d-4e8c-b77b-23783195f042_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dYvTJQC/IfPaBrtHpj9At40Ffo/rIC52LNLZ/ZlM/ms="></script>
+    nonce="aHGG4BkN0idGoY7dTa02WtF2vrgm60yPTNl2+oDQJpY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1064505/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               369
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1064505/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               369
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
