--- a/VRChat/07/1064407.html
+++ b/VRChat/07/1064407.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "sPTcHPAJnewAo34EctEj/07/+37MFhOGq7z/7ZTvMI8="></script>
+    "CgN7qjAd4kVpRi7CEcZr5UiNeYqlQg7P2x6sEYlsdYU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おためしさんぐらす黒.unitypackage","description":"VRChatでの利用を想定した、ちょっと凝ったデザインのサングラスです。\n\nさぶすたんすぺいんたーの練習で作りました。\n\nシェイプキーが入っているので、顔のサイズに合わせて調整したり、レンズの角度を調整できるかもしれません。\n\n\n■利用上の注意\n単体や、データが取り出せる形での再配布のみ全て不許可\nただし、VRCでのペデスタル等、データが取り出せない形での再配布は許可します\n再配布以外の利用方法は商用、非商用を問わずご自由にお使いください\n\n使用したSSをSNS等に上げると作者が喜びます\n\n■使用方法や仕様\n・ポリゴン数\n　多分632\n\n・導入方法\n　UnitypackageをUnityにぶちこんで、PrefabをSceneに突っ込むだけで多分使えます\n\nシェイプキー3種類が設定されており、それぞれ\nブリッジの幅\n中央部のでっぱり具合\nレンズの角度\n\nを調整することが出来ます。\n\nヒエラルキーからメガネのメッシュの部分を選択することで編集が可能です。\n\n\n何かご不明な点や不具合などありましたらお気軽に作者ツイッター(@popico_VT)までご連絡ください。","url":"https://booth.pm/ja/items/1064407","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/13e72562-5481-4676-9ce5-6a97e2f60d62/i/1064407/ce7da68e-a96a-43ba-a5c2-0a311fdceb2e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sPTcHPAJnewAo34EctEj/07/+37MFhOGq7z/7ZTvMI8="></script>
+    nonce="CgN7qjAd4kVpRi7CEcZr5UiNeYqlQg7P2x6sEYlsdYU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1064407/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               299
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1064407/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               299
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
