--- a/VRChat/10/1063810.html
+++ b/VRChat/10/1063810.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "6vckFlcZxlgtANDHlR3AeJ3s6HNo3LLc2/gcrdVISCc="></script>
+    "hs06PGbnlnTswrF7CTcwAWKZ00QpOCrO5gaoCe32bCM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChatアバター】カンフータイガー","description":"VRChat用のカンフーな虎くんケモノモデルです！\n\n・Full Body Tracking対応済！\n・リップシンク用シェイプキー完備\n・追加表情モーフ４種\n・Blender編集ファイル同梱・改造用の服を着ていない素体もあります！\n・テクスチャも改造用に統合前の物が入っています！\n","url":"https://booth.pm/ja/items/1063810","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/fc6b0a4d-1d17-4d55-a0f6-963e574057a2/i/1063810/8f5cbea0-9e66-4bf7-bdb3-ff803706390a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="6vckFlcZxlgtANDHlR3AeJ3s6HNo3LLc2/gcrdVISCc="></script>
+    nonce="hs06PGbnlnTswrF7CTcwAWKZ00QpOCrO5gaoCe32bCM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +118,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -161,7 +163,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1063810/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               141
@@ -176,14 +178,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1063810/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               141
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
